apps/base-docs/src/pages/tutorials/styles.module.css
.tag {
  padding: 0.75rem 1.75rem;
  font-family: CoinbaseSans !important;
  text-transform: uppercase;
  font-size: 0.75rem;
  font-weight: 450;
}

.tagButton {
  border-radius: 100px;
  background-color: transparent;
  border: 1px solid var(--base-docs-color-line-heavy);
  background-color: var(--base-docs-color-bg);
  cursor: pointer;
}

.tagButtonActive {
  background-color: var(--base-docs-color-secondary);
}

.tagList {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 0.75rem;
  margin-bottom: 25px;
}

.tutorialListTag {
  padding: 0.7rem 1.7rem;
  font-family: CoinbaseSans !important;
  text-transform: uppercase;
  font-size: 0.7rem;
  font-weight: 425;
  border-radius: 100px;
  background-color: transparent;
  color: var(--base-docs-color-fg-muted);
  border: 0.75px solid var(--base-docs-color-line-heavy);
}

.tutorialsMainContainer a,
.tutorialsMainContainer a:hover {
  text-decoration: none;
  color: var(--base-docs-color-fg);
}

.tutorialsMainContainer {
  display: flex;
  flex-direction: column;
  max-width: 100%;
}

.tutorialsInnerContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.tutorialsMarkdown {
  max-width: 841px !important;
  padding-top: 24px;
  padding-bottom: 24px;
}

.tutorialsTitle {
  font-family: CoinbaseDisplay !important;
  font-size: 3.5rem;
  line-height: 1.25;
  font-weight: 400;
}

.tutorialList {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.tutorialListTitle {
  font-family: CoinbaseDisplay !important;
  font-size: 2rem;
  line-height: 1;
  font-weight: 400;
}

.tutorialListCell {
  border-radius: 3px !important;
  display: flex;
  flex-direction: column;
  background-color: var(--base-docs-color-fg-negative);
  padding: 24px;
  gap: 24px;
  border-color: var(--base-docs-color-line);
  border-width: 1px;
  cursor: pointer;
}

.tutorialListCell:hover {
  background-color: var(--base-docs-color-bg-alt);
}

.tutorialListCellInfo {
  display: flex;
  flex-direction: row;
  gap: 12px;
  font-family: CoinbaseSans !important;
  font-size: 0.9rem;
  line-height: 1.25;
  font-weight: 400;
}

.tutorialAuthor {
  color: var(--primary) !important;
}

@media (min-width: 997px) {
  .tutorialsMainContainer {
    flex-grow: 1;
  }
}

